--- a/QIX.BiblePTT/QIX.BiblePTT.csproj
+++ b/QIX.BiblePTT/QIX.BiblePTT.csproj
@@ -9,7 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Commons\**" />
+    <EmbeddedResource Remove="Commons\**" />
+    <None Remove="Commons\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AntdUI" Version="1.4.7" />
+    <PackageReference Include="FreeSpire.Presentation" Version="7.8.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
@@ -32,7 +39,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commons\" />
     <Folder Include="Resources\Data\Bibles\" />
     <Folder Include="Resources\Data\Books\" />
     <Folder Include="Resources\Data\Verses\" />
