--- a/QIX.BiblePTT/QIX.BiblePTT.csproj
+++ b/QIX.BiblePTT/QIX.BiblePTT.csproj
@@ -6,12 +6,28 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UseWPF>False</UseWPF>
+    <AssemblyName>HmooZoo Presentation</AssemblyName>
+    <ApplicationIcon>Logo.ico</ApplicationIcon>
+    <Title>Bible Presentation</Title>
+    <PackageIcon>Logo.png</PackageIcon>
+    <Company>HmooZoo Official</Company>
+    <Authors>Ma Seo Sen</Authors>
+    <Copyright>senms</Copyright>
+    <PackageProjectUrl></PackageProjectUrl>
+    <Description>Open Source</Description>
+    <RepositoryUrl>https://github.com/pyhteam/QIX.BiblePTT</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="Commons\**" />
     <EmbeddedResource Remove="Commons\**" />
     <None Remove="Commons\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Logo.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +59,13 @@
     <Folder Include="Resources\Data\Bibles\" />
     <Folder Include="Resources\Data\Books\" />
     <Folder Include="Resources\Data\Verses\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\Logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
