--- a/QIX.BiblePTT/QIX.BiblePTT.csproj
+++ b/QIX.BiblePTT/QIX.BiblePTT.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="QuantConnect.pythonnet" Version="2.0.38" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.7" />
   </ItemGroup>
 
