--- a/QIX.BiblePTT/QIX.BiblePTT.csproj
+++ b/QIX.BiblePTT/QIX.BiblePTT.csproj
@@ -23,13 +23,11 @@
     <Version>2.0.1.0</Version>
   </PropertyGroup>
 
-  <ItemGroup>
+    <ItemGroup>
     <Compile Remove="Commons\**" />
     <Compile Remove="Resources\Data\**" />
     <EmbeddedResource Remove="Commons\**" />
-    <EmbeddedResource Remove="Resources\Data\**" />
     <None Remove="Commons\**" />
-    <None Remove="Resources\Data\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -53,6 +51,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
+    <ItemGroup>
+      <None Update="Data\**" CopyToOutputDirectory="PreserveNewest" />
+      <None Update="Libs\**" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
